Story 1849. Updated RegistryClient to use the new Capabilities, Capability and Interface classes. Updated tests and properties files.